added the swipe script

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 SkiFriRunner/Library/metadata/
 SkiFriRunner/Temp/
 SkiFriRunner/Library/Collab/
+SkiFriRunner/Library/ShaderCache/
+SkiFriRunner/Library/ScriptAssemblies/
+SkiFriRunner/Library/shadercompiler-UnityShaderCompiler.exe0.log
+SkiFriRunner/obj/
