started my python journey

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 SkiFriRunner/Library/metadata/
 SkiFriRunner/Temp/
 SkiFriRunner/Library/Collab/
+/python_coding_interviews/.venv/Lib
+/python_coding_interviews/.venv/Scripts
